# compta

./: .gitignore  Cargo.toml
backend/: Cargo.toml  Rocket.toml
backend/src/: build.rs  file_handling.rs  main.rs  payment.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
frontend/src/components/: entryList.rs  entry_list.rs  mod.rs  total.rs
