[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
rocket = { version="0.5.0", features = ["json"] }
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenv = "0.15.0"
chrono = "0.4"
env_logger = "0.9"
log = "0.4"