[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
yew = { version="0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-console = "0.3"
reqwasm = "0.4.0"
chrono = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    "HtmlSelectElement",
]
